egress-authpolicies/authorization-policies/policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-test-sa
  namespace: istio-egress
spec:
  selector:
    matchLabels:
      app: istio-egressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-test/sa/istio-test-sa"]
    to:
    - operation:
        hosts: ["edition.cnn.com"]
